--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
   "name": "ping-minecraft",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A minecraft server ping & query tool",
   "author": "Wany <sung@wany.io> (https://wany.io)",
-  "main": "index.mjs",
+  "main": "lib/index.js",
+  "exports": {
+    "require": "./lib/index.js",
+    "import": "./src/index.mjs"
+  },
   "keywords": [
     "ping",
     "minecraft",
     "cli"
   ],
-  "homepage": "https://github.com/wnynya/ping-minecraft#readme",
+  "homepage": "https://github.com/wnynya/Ping-Minecraft#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wnynya/ping-minecraft.git"
+    "url": "https://github.com/wnynya/Ping-Minecraft.git"
   },
   "scripts": {
-    "ping": "node index.mjs"
+    "ping": "node index.mjs",
+    "babel": "npx babel src --out-file-extension .js --out-dir lib"
   },
   "dependencies": {
     "minecraft-protocol": "^1.36.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.14.9",
+    "babel-plugin-replace-import-extension": "^1.1.3",
+    "babel-plugin-transform-import-meta": "^2.2.0",
+    "babel-preset-minify": "^0.5.2"
   }
 }
